maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:18: error: type mismatch;
 found   : Double
 required: Int
      v=virage-1
              ^PledgeMaze:25: error: type mismatch;
 found   : Double
 required: Int
    v=virage+1
            ^